# blind-insight-rs

./: Cargo.toml  README.md
blind-proxy-rs/: Cargo.toml  README.md
blind-proxy-rs/src/: bip39.rs  cli.rs  error.rs  keyring.rs  main.rs  organizations.rs
blind-wrapper-rs/: Cargo.toml  README.md
blind-wrapper-rs/.openapi-generator/: FILES
blind-wrapper-rs/docs/: AccountVerified.md  AccountVerifiedError.md  AccountsApi.md  ActionEnum.md  AuditLogEntry.md  ChangePassword.md  CsrfApi.md  CsrfRetrieve200Response.md  Dataset.md  DatasetsApi.md  DefaultLogin.md  DefaultRegisterEmail.md  DefaultSendResetPasswordLink.md  DefaultUserProfile.md  FilesApi.md  Grant.md  GrantsApi.md  IdentitiesApi.md  Identity.md  IndexedRecord.md  IndexedRecordHashedLabelMapValue.md  IndexedRecordHashedLabelMapValueFieldSchema.md  JobsApi.md  JobsStatus200Response.md  JobsStatus404Response.md  JobsUpload200Response.md  JobsUploadRequestInner.md  JobsUploadRequestInnerDataValue.md  LoginSuccessful.md  LoginSuccessfulError.md  Logout.md  LogoutSuccessful.md  LogoutSuccessfulError.md  Material.md  MaterialProof.md  MaterialsApi.md  MaterialsReceiveDetail200Response.md  Organization.md  OrganizationCreate.md  OrganizationInvitation.md  (+51 more)
blind-wrapper-rs/src/apis/: accounts_api.rs  configuration.rs  csrf_api.rs  datasets_api.rs  files_api.rs  grants_api.rs  identities_api.rs  jobs_api.rs  materials_api.rs  mod.rs  organizations_api.rs  records_api.rs  requests_api.rs  schemas_api.rs  status_api.rs  token_api.rs  users_api.rs  ws_api.rs
blind-wrapper-rs/src/models/: account_verified.rs  dataset.rs  (+76 more)
